--- a/nginx_hn.conf
+++ b/nginx_hn.conf
@@ -13,4 +13,8 @@ server {
 		uwsgi_pass hn_news;
 		include /usr/local/etc/nginx/uwsgi_params;
 	}
+
+	location /static/ {
+	    alias <YOUR STATIC PATH HERE>;
+	}
 }
